--- a/views/login.hbs
+++ b/views/login.hbs
@@ -8,7 +8,7 @@
       name="email"
       class="form-control"
       aria-describedby="emailHelp"
-      value="john.doe@example.com"
+      value="elbekdamirov0415@gmail.com"
     />
   </div>
   <div class="mb-3">
@@ -18,41 +18,15 @@
       id="password"
       name="password"
       class="form-control"
-      value="hashedpassword123"
+      value="elbek0415"
     />
   </div>
 
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
-<script>
-  const loginForm = document.getElementById("loginForm")
+<script src="./js/script.js"></script>
 
-  loginForm.addEventListener("submit", async (e)=>{
-    e.preventDefault()
-    const email = document.getElementById("email").value
-    const password = document.getElementById("password").val
-    try {
-        fetch("http://localhost:3333/api/author/login", {
-            method: "POST",
-            headers: {
-                'Content-Type': "application/json"
-            },
-            body: JSON.stringify({
-                email,
-                password
-            })
-        }).then((response)=>{
-            console.log(response)
-            if (response.ok){
-                console.log("Login successfuly")
-                return response.json()
-            } else {
-                console.log("Login failed")
-            }
-        })
-    } catch(error){
-        console.log(error)
-    }
-  })
+<script>
+  login()
 </script>
