--- a/views/authors.hbs
+++ b/views/authors.hbs
@@ -1,6 +1,8 @@
 <h3>Authors</h3>
 
-<div class="container" style="display:flex; gap:15px">
+<ul id="list-authors"></ul>
+
+{{!-- <div class="container" style="display:flex; gap:15px">
   {{#each authors}}
 
     <div class="card" style="width: 18rem;">
@@ -18,4 +20,10 @@
       </div>
     </div>
   {{/each}}
-</div>
+</div> --}}
+
+<script src="./js/script.js"></script>
+
+<script>
+  getAuthors()
+</script>
